--- a/template_ok/scss/bootstrap/_bootstrap-styles.scss
+++ b/template_ok/scss/bootstrap/_bootstrap-styles.scss
@@ -458,6 +458,8 @@ pre {
     flex-wrap: wrap;
     margin-right: -0.75rem;
     margin-left: -0.75rem;
+    font-family: monospace;
+    font-size: 16px;
 }
 
 .fixed-top {
