--- a/views/admin/usuarios/index.twig
+++ b/views/admin/usuarios/index.twig
@@ -25,7 +25,7 @@
 						</div>
 					</div>
 
-					<div class=" row mb-6">
+					<!--<div class=" row mb-6">
 						<label for="inputName" class="col-sm-2 form-label">Nombres</label>
 						<div class="col-sm-2">
 							{{ text_field_tag("nombres", model.nombres, {class:'form-control', placeholder:'Nombres'}) }}
@@ -44,9 +44,9 @@
 								<option value="no">NO</option>
 							</select>
 						</div>
-					</div>
+					</div>-->
 
-					<div class=" row mb-6">
+					<!--<div class=" row mb-6">
 						<label for="inputName" class="col-sm-2 form-label">Canal</label>
 						<div class="col-sm-2">
 							<select id="canal" name="canal" class="form-control form-select">
@@ -57,9 +57,9 @@
 								<option value="OPERATIVO">OPERATIVO</option>
 								<option value="FALLIDAS">FALLIDAS</option>
 							</select>
-						</div>
+						</div>-->
 
-						<label for="inputName" class="col-sm-2 form-label">Plaza</label>
+						<!--<label for="inputName" class="col-sm-2 form-label">Plaza</label>
 						<div class="col-sm-2">
 							<select id="plaza" name="plaza" class="form-control form-select">
 								<option value=""></option>
@@ -82,40 +82,11 @@
 								<option value="TELEFONIA">TELEFONIA</option>
 							</select>
 						</div>
-					</div>
+					</div>-->
 
-					<div class=" row mb-6">
-						<label for="inputName" class="col-sm-2 form-label">Identificador</label>
-						<div class="col-sm-2">
-							<select id="identificador" name="identificador" class="form-control form-select">
-								<option value=""></option>
-								<option value="DM">DM</option>
-								<option value="MN">MN</option>
-								<option value="TELF">TELF</option>
-							</select>
-						</div>
+					
 
-						<label for="inputName" class="col-sm-2 form-label">Equipo</label>
-						<div class="col-sm-2">
-							<select id="equipo" name="equipo" class="form-control form-select">
-								<option value=""></option>
-								<option value="PLAZAS">PLAZAS</option>
-								<option value="PREJURIDICO">PREJURIDICO</option>
-								<option value="ZONA 1 UIO">ZONA 1 UIO</option>
-								<option value="ZONA 2 UIO">ZONA 2 UIO</option>
-								<option value="ZONA 3 UIO">ZONA 3 UIO</option>
-								<option value="ZONA 4 UIO">ZONA 4 UIO</option>
-							</select>
-						</div>
-					</div>
-
-					<div class="mb-0 mt-4 ">
-						<div class="col-md-12">
-							<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-							<button class="btn btn-secondary" onclick="todos()" type="button"><i class="fa fa-eye"></i> Ver todos</button>
-							<a href="{{ root }}/admin/usuarios/crear" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Crear usuario</a>
-						</div>
-					</div>
+						
 				</form>
 			</div>
 		</div>
