--- a/views/cliente/editar.twig
+++ b/views/cliente/editar.twig
@@ -57,7 +57,7 @@
 								<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0">
 									<thead>
 									<tr>
-										<th>Número Oro</th>
+										<th>Número Principal</th>
 										<th>Tipo</th>
 										<th>Descripción</th>
 										<th>Teléfono</th>
