--- a/views/home.twig
+++ b/views/home.twig
@@ -1,51 +1,15 @@
 {% extends layoutApp %}
 {% block content %}
-	
-			
-	<div class="row">
-    <div class="col-lg-8">
-        <div class="card overflow-hidden">
-            <div class="card-header">
-                <h3 class="card-title" style="font-weight: bold;"><i class="fa fa-codepen"></i> SEGUIMIENTOS DE HOY</h3>
-            </div>
-            <div class="card-body">
-			<table id="data-table" class="table table-bordered table-sm mb-0">
-						
-							<thead class="table-primary">
-							
-							<tr>
-								<th>USUARIO</th>
-								<th>GESTION</th>
-								<th>CLIENTE</th>
-								<!--<th>CONTACTADAS</th>-->
-								<!--<th>NO CONTACTADAS</th>-->
-								<!--<th>COMPROMISOS</th>-->
-							</tr>
-							</thead>
-							<tbody>
-							{% for ds in data_seguimientos %}
-								<tr>
-									<td>
-										<span class="badge bg-success-transparent rounded-pill text-success p-2 px-3">{{ ds.usuario }}</span>
-									</td>
-									<td style="text-align: center;">{{ ds.gestiones }}</td>
-									<td style="text-align: center;">{{ ds.clientes }}</td>
-									<!--<td style="text-align: center;">{{ ds.contactadas }}</td>-->
-									<!--<td style="text-align: center;">{{ ds.no_contactadas }}</td>-->
-									<!--<td style="text-align: center;">{{ ds.compromisos }}</td>-->
-								</tr>
 
-								
-							{% endfor %}
-							
-							</tbody>
-							
-						</table>
-						
-                </div>
-        </div>
-    </div>
-    <div class="col-lg-4">
+						<h4 class="">USUARIO</h4>
+                        <h3 ></i>&nbsp;{{ ds.usuario }}</h3><br/>
+                        <h4 class="">GESTION</h4>
+                        <h3 >{{ ds.gestiones }}</h3>
+                        <h4 class="">CLIENTE</h4>
+                        <h3 >{{ ds.clientes }}</h3>
+					
+
+<div class="col-lg-4">
         <div class="card overflow-hidden">
             <div class="card-body">
                 <div class="d-flex">
@@ -54,99 +18,37 @@
                         <h3 class="mb-0 number-font"><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;{{ hora_primera_gestion }}</h3><br/>
                         <h4 class="">ÚLTIMA GESTIÓN</h4>
                         <h3 class="mb-0 number-font"><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;{{ hora_ultima_gestion }}</h3>
-                    </div>
+					</div>
+
                     <div class="ms-auto" style="font-size: 80px; color: #46B476;">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-	<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-		<div class="card">
-			<div class="card-header">
-				<h3 class="card-title" style="font-weight: bold;"><i class="fa fa-file-excel-o"></i> CARGA DE
-					INFORMACIÓN</h3>
-			</div>
-			<div class="card-body">
-				<table id="data-table" class="table table-bordered table-sm mb-0">
-					<thead class="table-info">
-					<tr>
-						<th>TIPO</th>
-						<th>REGISTROS</th>
-						<th>ERRORES</th>
-						<th>OBSERVACIONES</th>
-						<th>FECHA</th>
-						<th>USUARIO</th>
-					</tr>
-					</thead>
-					<tbody>
-					{% for uc in ultimas_cargas %}
-						<tr>
-							<td style="text-transform: uppercase;">{{ uc.tipo }}</td>
-							<td style="text-align: center;">{{ uc.total_registros }}</td>
-							<td style="text-align: center;">
-								{% if uc.total_errores > 0 %}
-									{{ uc.total_errores }}
-								{% else %}
-									0
-								{% endif %}
-							</td>
-							<td>{{ uc.observaciones }}</td>
-							<td style="text-align: center;">{{ uc.fecha_ingreso }}</td>
-							<td style="text-align: center; text-transform: uppercase;">{{ uc.usuario }}</td>
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
-	<!-- COL END -->
-	{#    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 col-xxl-3"> #}
-	{#        <div class="card overflow-hidden"> #}
-	{#            <div class="card-body pb-0 bg-recentorder"> #}
-	{#                <h3 class="card-title text-white">Recent Orders</h3> #}
-	{#                <div class="chartjs-wrapper-demo"> #}
-	{#                    <canvas id="recentorders" class="chart-dropshadow"></canvas> #}
-	{#                </div> #}
-	{#            </div> #}
-	{#            <div id="flotback-chart" class="flot-background"></div> #}
-	{#            <div class="card-body"> #}
-	{#                <div class="d-flex mb-4 mt-3"> #}
-	{#                    <div #}
-	{#                            class="avatar avatar-md bg-secondary-transparent text-secondary bradius me-3"> #}
-	{#                        <i class="fe fe-check"></i> #}
-	{#                    </div> #}
-	{#                    <div class=""> #}
-	{#                        <h6 class="mb-1 fw-semibold">Delivered Orders</h6> #}
-	{#                        <p class="fw-normal fs-12"> <span class="text-success">3.5%</span> #}
-	{#                            increased </p> #}
-	{#                    </div> #}
-	{#                    <div class=" ms-auto my-auto"> #}
-	{#                        <p class="fw-bold fs-20"> 1,768 </p> #}
-	{#                    </div> #}
-	{#                </div> #}
-	{#                <div class="d-flex"> #}
-	{#                    <div class="avatar  avatar-md bg-pink-transparent text-pink bradius me-3"> #}
-	{#                        <i class="fe fe-x"></i> #}
-	{#                    </div> #}
-	{#                    <div class=""> #}
-	{#                        <h6 class="mb-1 fw-semibold">Cancelled Orders</h6> #}
-	{#                        <p class="fw-normal fs-12"> <span class="text-success">1.2%</span> #}
-	{#                            increased </p> #}
-	{#                    </div> #}
-	{#                    <div class=" ms-auto my-auto"> #}
-	{#                        <p class="fw-bold fs-20 mb-0"> 3,675 </p> #}
-	{#                    </div> #}
-	{#                </div> #}
-	{#            </div> #}
-	{#        </div> #}
-	{#    </div> #}
-	<!-- COL END -->
-
-
+			
+				<div class="col-lg-2">
+						<div class="card-container">
+								{% for uc in ultimas_cargas %}
+								<div class="card">
+									<div class="card-header">
+									Acciones:   {{ uc.tipo }}
+									</div>
+									<div class="card-body">
+									<p>Registros: {{ uc.total_registros }}</p>
+									<p>Errores: {{ uc.total_errores }}</p>
+									<p>Observaciones: {{ uc.observaciones }}</p>
+									<p>Fecha: {{ uc.fecha_ingreso }}</p>
+									<p>Usuario: {{ uc.usuario }}</p>
+									</div>
+								</div>
+								{% endfor %}
+						</div>
+	
+				</div>
+				<div class="col-lg-2">
+        </div>
+				
 
 	<!-- INTERNAL  CHART JS-->
 	<script src="{{ root }}/template_ok/plugins/chart/Chart.bundle.js"></script>
