--- a/views/institucion/index.twig
+++ b/views/institucion/index.twig
@@ -58,7 +58,7 @@
 	<div class="col-md-12 col-xl-12">
 		<div class="card">
 			<div class="card-header">
-				<h4 class="card-title">Lista de Instituciones</h4>
+				<h4 class="card-title">Lista de Cedentes</h4>
 			</div>
 			<div class="card-body">
 				<div id="lista"></div>
