--- a/views/layout.twig
+++ b/views/layout.twig
@@ -12,7 +12,7 @@
 <body class="app sidebar-mini ltr light-mode">
 <!-- GLOABAL LOADER -->
 <div id="global-loader">
-    <img src="{{ root }}/template_ok/images/loader.svg" class="loader-img" alt="Loader"/>
+    <img src="{{ root }}/template/images/loader.svg" class="loader-img" alt="Loader"/>
 </div>
 <!-- /GLOABAL LOADER -->
 
@@ -50,15 +50,15 @@
                                         </div>
                                     </form>
                                      <form action="#" method="get" class="ms-3">
-                                        <small class="text-muted">{{ user.nombres }}
+                                        <small style="color: black;">{{ user.nombres }}
                                                         &nbsp;{{ user.apellidos }}</small>
                                     </form>
                                     
                                   
 
-                                    {% if alertasTop %}
+                                    <!--{% if alertasTop %}
                                         {% include('home/alertas.twig') %}
-                                    {% endif %}
+                                    {% endif %}-->
                                     <!-- ALERTAS -->
 
                                     
