--- a/views/login.twig
+++ b/views/login.twig
@@ -21,7 +21,7 @@
 <div class="">
 
 	<div id="global-loader">
-		<img src="{{ root }}/template_ok/images/loader.svg" class="loader-img" alt="Loader"/>
+		<img src="{{ root }}/template/images/loader.svg" class="loader-img" alt="Loader"/>
 	</div>
 	
 	
