--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -61,7 +61,7 @@
                                 <tr v-for="a in asignacion">
                                     <template v-if="typeof a.aplicativo !== 'undefined'">
 
-                                    <template v-if="a.marca == 'DINERS'">
+                                    <template v-if="a.marca == 'Prue'">
                                         <td style="text-align: center; background-color: #0066A8; color: white; vertical-align: middle; font-weight: bold;">
                                             DINERS
                                         </td>
@@ -126,7 +126,7 @@
                             <table>
                                 <tr>
                                     <td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
-                                    <td style="border: 1px solid white;">Número ORO</td>
+                                    <td style="border: 1px solid white;">Número Principal</td>
                                 </tr>
                             </table>
                             <table class="table border table-bordered table-sm mb-0">
@@ -202,7 +202,7 @@
                             <table>
                                 <tr>
                                     <td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
-                                    <td style="border: 1px solid white;">Dirección ORO</td>
+                                    <td style="border: 1px solid white;">Dirección Princiapl</td>
                                 </tr>
                             </table>
                             <table class="table border table-bordered table-sm mb-0">
