--- a/views/producto/editarPichincha.twig
+++ b/views/producto/editarPichincha.twig
@@ -126,7 +126,7 @@
                             <table>
                                 <tr>
                                     <td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
-                                    <td style="border: 1px solid white;">Número ORO</td>
+                                    <td style="border: 1px solid white;">Número Principal</td>
                                 </tr>
                             </table>
                             <table class="table border table-bordered table-sm mb-0">
@@ -202,7 +202,7 @@
                             <table>
                                 <tr>
                                     <td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
-                                    <td style="border: 1px solid white;">Dirección ORO</td>
+                                    <td style="border: 1px solid white;">Dirección Principal</td>
                                 </tr>
                             </table>
                             <table class="table border table-bordered table-sm mb-0">
