--- a/template/css/style.css
+++ b/template/css/style.css
@@ -4758,7 +4758,7 @@ table.table-mail tr td {
 
 .navy-bg,
 .bg-success {
-	background-color: #1ab394;
+	background-color: #7bf8df;
 	color: #ffffff;
 }
 
