--- a/template_ok/colors/color1.scss
+++ b/template_ok/colors/color1.scss
@@ -65,7 +65,7 @@ a.text-primary {
     > {
         th,
         td {
-            background-color: #d2cdf9;
+            background-color: #5c5973;
         }
     }
 }
