--- a/views/layout.twig
+++ b/views/layout.twig
@@ -24,8 +24,7 @@
         <div class="app-header header sticky">
             <div class="container-fluid main-container">
                 <div class="d-flex">
-                    <a aria-label="Hide Sidebar" class="app-sidebar__toggle" data-bs-toggle="sidebar"
-                       href="javascript:void(0)"></a>
+                    <a aria-label="Hide Sidebar" class="app-sidebar__toggle" data-bs-toggle="sidebar"href="javascript:void(0)"></a>
 
                    
 
@@ -113,7 +112,7 @@
                     <!-- LOGO -->
                 </div>
                 <div class="main-sidemenu">
-                    <div class="slide-left disabled" id="slide-left">
+                    <div class="" id="slide-left">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191" width="24" height="24"
                              viewBox="0 0 24 24">
                             <path d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"/>
