--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -181,7 +181,7 @@
 
 			<div class="card">
 				<div class="card-header">
-					<h4 class="card-title">SEGUIMIENTO</h4>
+					<h4 class="card-title">SEGUIMIENTO prueba</h4>
 				</div>
 				<div class="card-body">
 					<div class=" row mb-4">
