coneccion arbol de paleta con paleta y gestion

--- a/views/admin/usuarios/index.twig
+++ b/views/admin/usuarios/index.twig
@@ -84,6 +84,14 @@
 						</div>
 					</div>-->
 
+					<div class="mb-0 mt-4 ">
+						<div class="col-md-12">
+							<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
+							<button class="btn btn-secondary" onclick="todos()" type="button"><i class="fa fa-eye"></i> Ver todos</button>
+							<a href="{{ root }}/admin/usuarios/crear" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Crear usuario</a>
+						</div>
+					</div>
+
 					
 
 						
